[project]
name = "medical-billing-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "beautifulsoup4>=4.14.3",
    "boto3>=1.42.33",
    "botocore>=1.42.33",
    "buildtools>=1.0.6",
    "chromadb>=1.4.1",
    "fastapi>=0.128.0",
    "langchain>=1.2.6",
    "langchain-aws>=1.2.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "loguru>=0.7.3",
    "pandas>=3.0.0",
    "pathlib>=1.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymysql>=1.1.2",
    "setuptools>=80.10.1",
    "sqlalchemy>=2.0.46",
]
